dphys-config (20130111~current-1) UNRELEASED; urgency=low

  * New upstream snapshot
    + Remove patches downgrade-download-warning.diff and
      fix-backtick-quoting.diff, applied upstream.
    + Refresh the remaining patches.
  * Clean up debian/rules, use dh style rules.
  * Use dh-exec to be able to rename files and hence drop the
    override_dh_install and override_dh_installchangelogs targets.
    + Add a versioned build-dependency on dh-exec >= 0.6 (due to #698017).
    + Add a #!dh-exec shebang line to debian/install, make it executable.
    + Bump debhelper compatibility and build-dependency to 9.
  * Fix traps in hobbit-support.diff if $HOBBITSERVERS is not defined.
  * Switch Vcs-* headers to GitHub.
  * Remove superfluous whitespace change in hobbit-support.diff

 -- Axel Beckert <abe@debian.org>  Mon, 11 Feb 2013 19:44:50 +0100

dphys-config (20100216-6) unstable; urgency=low

  * fix backtick preprocessing to allow commands with arguments

 -- Elmar S. Heeb <elmar@heebs.ch>  Thu, 10 Jan 2013 15:49:52 +0100

dphys-config (20100216-5) unstable; urgency=low

  * added default stop runlevels in init.d

 -- Elmar S. Heeb <elmar@heebs.ch>  Thu, 10 Jan 2013 14:28:30 +0100

dphys-config (20100216-4) unstable; urgency=low

  * downgrade download warnings from WARNING to INFO
  * added Elmar S. Heeb <elmar@heebs.ch> to uploaders

 -- Elmar S. Heeb <elmar@heebs.ch>  Thu, 10 Jan 2013 12:43:55 +0100

dphys-config (20100216-3) experimental; urgency=low

  * Add feature patch for Interactive and Diff mode by Claude Becker.
    + Mention Hobbit/Xymon reporting and Interactive mode in the long
      description.
  * Fix Hobbit/Xymon reporting to not send "green" reports on --help.
  * Switch to source format "3.0 (quilt)"
    + Remove quilt build-dependency as well as patch and unpatch targets
  * Fix lintian warning "init.d-script-does-not-implement-optional-option
    status"
  * Bump Standards-Version to 3.9.3 (no changes)
