@@ -4,6 +4,7 @@ dphys-config (20130111~current-1) UNRELEASED; urgency=low
     + Remove patches downgrade-download-warning.diff and
       fix-backtick-quoting.diff, applied upstream.
     + Refresh the remaining patches.
+  * Remove diff+install commandline options due to non-unique letters.
   * Clean up debian/rules, use dh style rules.
   * Use dh-exec to be able to rename files and hence drop the
     override_dh_install and override_dh_installchangelogs targets.
